--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ nav {
 
 h2 {
     background-image: linear-gradient(to right top, #ffb366, #A8EB12);
-    -webkit-background-clip: text;
+    background-clip: text;
     color: transparent;
     font-family: cursive;
     font-size: 3rem;
