add divider, change header img

--- a/style.css
+++ b/style.css
@@ -5,18 +5,21 @@ body {
     background-color: #0e1b0c;
     color: #f9fe95;
     opacity: 1;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: flex-start;
+    align-items: stretch;
 }
 
 nav ul {
-    margin: 0;
+    margin: 1vh;
 }
 
 nav {
-    padding: 0.9rem;
-    height: 60px;
+    height: 5vh;
     width: 100%;
     position: fixed;
-    opacity: 2;
     z-index: 2;
     background-color: rgba(16, 20, 16, 0.75);
 }
@@ -29,7 +32,7 @@ nav {
 .nav-link {
     text-decoration: none;
     padding: 0.5rem 1rem;
-    color: BCB88A;
+    color: #BCB88A;
     display: inline-block;
 }
 
@@ -112,18 +115,16 @@ header h1 span:nth-of-type(11) {
 
 
 header {
-    text-align: center;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     width: 100%;
     height: 70vh;
-    padding-top: 60px;
-    background-image: url('https://img.freepik.com/free-vector/gradient-network-connection-background_23-2148870458.jpg?w=996&t=st=1712958402~exp=1712959002~hmac=7000c1f8b931c301145c604e05a0598b65d82c4ed167cca2408614ed314f4784');
+    background-image: url('https://img.freepik.com/free-photo/3d-render-modern-background-with-plexus-design_1048-14881.jpg?w=996&t=st=1713038310~exp=1713038910~hmac=9f4cc9aeffa43c473d174dcfa6fc57466cecbbbbe94a68e2d7e8176bea6a42cc');
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: left bottom;
+
 }
 
 h1 span {
@@ -142,29 +143,19 @@ header p {
     margin-top: 0;
 }
 
-
 section {
-    padding: 2rem;
     animation: fadeInSpan 2s ease forwards;
-
+    margin: 40px 0;
 }
 
 .container {
-    width: 70%;
+    width: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap
-}
-
-.about,
-.skills {
-    padding-top: 0;
-    display: flex;
-    flex-direction: column;
+    flex-wrap: nowrap;
     justify-content: flex-start;
     align-items: center;
+    align-content: center;
 }
 
 #iframe {
@@ -183,17 +174,15 @@ section {
     text-align: center;
 }
 
-.portfolio {
-    display: block;
+.about,
+.skills,
+.portfolio,
+.contact {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    width: 100%;
-}
-
-.social-links {
-    margin-top: 1rem;
+    width: 80%;
 }
 
 .social-links a {
@@ -211,15 +200,12 @@ section {
 }
 
 
-.contact h2 {
-    display: flex;
-    justify-content: center;
-}
+
 
 .social-links {
     display: flex;
     justify-content: center;
-    gap: 20px;
+
 }
 
 .social-links a {
@@ -266,29 +252,30 @@ section {
 }
 
 @media screen and (max-width: 412px) {
-    .container {
-        width: 100%;
-    }
-
-    .row {
-        display: block;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
 
     nav ul li {
         display: block;
         margin: 0.5rem 0;
     }
 
-    h1 {
-        font-size: 3.5rem;
+    nav {
+        height: auto;
+    }
+
+    h1 span {
+        font-size: 3rem;
+    }
+
+    h2 {
+        font-size: 1.75rem;
+    }
+
+    header {
+        width: 100%;
     }
 
     header p {
-        font-size: 1.5rem;
+        font-size: 1.2rem;
     }
 
     .social-links {
@@ -306,4 +293,10 @@ footer {
     color: #BCB88A;
     padding: 20px 0;
     text-align: center;
+    width: 100%;
+}
+
+.divider {
+    border: #d4fe00 1px solid;
+    width: 100%;
 }
