--- a/style.css
+++ b/style.css
@@ -121,7 +121,7 @@ header {
     align-items: center;
     width: 100%;
     height: 70vh;
-    background-image: url('https://img.freepik.com/free-photo/3d-render-modern-background-with-plexus-design_1048-14881.jpg?w=996&t=st=1713038310~exp=1713038910~hmac=9f4cc9aeffa43c473d174dcfa6fc57466cecbbbbe94a68e2d7e8176bea6a42cc');
+    background-image: url('https://w0.peakpx.com/wallpaper/631/776/HD-wallpaper-black-and-green-abstract-minimal.jpg');
     background-size: cover;
     background-repeat: no-repeat;
 
